# PNSEI

./: .clang-format  .gitignore  README.md  algo.ods  clean_punc.sh
cpp/: 149.h  149_Max_Points_on_a_Line.h  208. Implement Trie (Prefix Tree).h  208_Implement_Trie_Prefix_Tree.h  214. Shortest Palindrome.h  254. Factor Combinations.h  307. Range Sum Query - Mutable.h  34. Search for a Range.h  361. Bomb Enemy.h  391. Perfect Rectangle.h  394. Decode String.h  42. Trapping Rain Water.h  438_Find_All_Anagrams_in_a_String.h  65. Valid Number.h  68. Text Justification.h  68.h  68_Text_Justification.h  927. Three Equal Parts.h  94. Binary Tree Inorder Traversal.h  99. Recover Binary Search Tree.h  BUILD  BoundedBlockingQueue.h  CMakeLists.txt  HDU_1254.h  HDU_pushbox.h  IndexMaxPQ.h  K-th Smallest in Lexicographical Order.h  KNN.h  MultiDimensionArray.h  README.md  Range_Queries_for_Longest_Correct_Bracket_Subsequence.cpp  _linkedlist.h  allLPS.h  avl.h  binarytree.h  blowoff_leaf.h  calendar.h  canPlaceFlower.h  comb_sum.h  deadlock.cpp  (+33 more)
cpp/20200811/: stretched_tree.h  testme20200811.cpp
cpp/addepar/: 109_Convert_Sorted_List_to_Binary_Search_Tree.h  10_Regular_Expression_Matching.h  121_Best_Time_to_Buy_and_Sell_Stock.h  162_Find_Peak_Element.h  329_Longest_Increasing_Path_in_a_Matrix.h  37_Sudoku_Solver.h  43_Multiply_Strings.h  44_Wildcard_Matching.h  465_Optimal_Account_Balancing.h  8puzzle.h  8puzzle_AStar.h  Find_a_peak_element_in_a_2D_array.h  README.md  addepar.cpp  addepar.h  boggle.h  concurrent_hashmap.h  kway_merge_file.cpp  local_maximum.h  local_minimum.h  local_minimum_tree.h  segment_tree.h  stock_reconciliation.h  wildcard_simplified.h  winner_tree.h
cpp/bolt/: Remove_brackets_from_an_algebraic_string.h
cpp/concurrency_parallel/: BoundedBlockingQueue.h  DelayQueue.h  README.md  concurrent_hashmap.h  concurrent_linkedlist.h  concurrent_queue.h  concurrent_stack.h  deadlock.cpp  deadlock_guaranteed.cpp  deadlock_guaranteed.h  h2o.h  memorypool.h  my_memory_order.h  my_semaphore.h  objectpool.h  rwlock.h  rwlock.md  scopedlock.h  threadpool.h  todo_rwlock.h
cpp/cplusplus/: cpp_faster_than_c.h  meta1.cpp  meta1.h  myset.cpp  mytime.h  profiler.h
cpp/cruise/: 150_Evaluate_Reverse_Polish_Notation.h  166_Fraction_to_Recurring_Decimal.h  224_Basic_Calculator.h  227_Basic_Calculator_II.h  227_Basic_Calculator_II.py  29_Divide_Two_Integers.py  304_Range_Sum_Query_2D_Immutable.h  307_Range_Sum_Query_Mutable_segmentTree.h  308_Range_Sum_Query_2D_Mutable.h  432_All_Oone_Data_Structure_LFU_Variant.h  529_Minesweeper.h  770_Basic_Calculator_IV.py  772_Basic_Calculator_III.py  816_Ambiguous_Coordinates.h  Gradient_Descent_LR.h  LFU.h  Pairwise_swap_elements_of_a_given_linked_list.h  RANSAC.h  README.md  all_points_in_Kmiles.h  build_tree_by_indentation.h  calculator.h  christmas_tree.h  clique.h  clique.input  clique.output  closest_car.h  design_excel.h  distributed_LRU.h  dup_strings_in_two_arrays.h  encircular.h  euclidean_clustering.h  heatmap_argmax.h  interval_subtraction.h  kalman_filter.h  minesweeper.h  no_or_single_parent_graph.h  number_of_islands_variant1.h  oa.h  overlap_interval.h  (+9 more)
cpp/dropbox/: 289. Game of Life.h  289_Game_of_Life.h  bittorrent_merge.h  find_duplicate_files.h  highest_minimum_sharpness.cpp  highest_minimum_sharpness.h  id_allocator.h  id_allocator_segment_tree.h  isDownloadComplete.h  key_value_store.h  message_queue.h  multithread_web_crawler.h  system_design_message_queue.h  todo_multithread_token_bucket.h  web_crawler.h
cpp/google/: bzoj1090.h  gg_findmaxwith1flip.h
cpp/graph/: 787_Cheapest_Flights_Within_K_Stops.cpp  787_Cheapest_Flights_Within_K_Stops.h  787_Cheapest_Flights_Within_K_Stops_test.cpp  MST_Kruskal_Prim.cpp  MST_Kruskal_Prim.h  SS_Dijkstra_Shortest.cpp  SS_Dijkstra_Shortest.h  SS_Dijkstra_Shortest_test.cpp  _785_Is_Graph_Bipartite.h  _785_Is_Graph_Bipartite_test.cpp  graph.h  mst.cpp  mst.h
cpp/leetcode/: 109_Convert_Sorted_List_to_Binary_Search_Tree.h  10_Regular_Expression_Matching.h  121_Best_Time_to_Buy_and_Sell_Stock.h  126_Word_Ladder_II.h  127_Word_Ladder.h  149_Max_Points_on_a_Line.h  162_Find_Peak_Element.h  189_Rotate_Array.h  18_4Sum.h  200_Number_of_Islands.h  214_Shortest_Palindrome.h  22_Generate_Parentheses.h  230_Kth_Smallest_Element_in_a_BST.h  253_Meeting_Rooms_II.h  255_Verify_Preorder_Sequence_in_Binary_Search_Tree.h  285_Inorder_Successor_in_BST.h  295_Find_Median_from_Data_Stream.h  295_Find_Median_from_Data_Stream.java  305_Number_of_Islands_II.h  307_Range_Sum_Query_Mutable.h  307_Range_Sum_Query_Mutable_segmentTree.h  314_binary-tree-vertical-order-traversal.h  329_Longest_Increasing_Path_in_a_Matrix.h  34_Search_for_a_Range.h  37_Sudoku_Solver.h  388_Longest_Absolute_File_Path.h  406_Queue_Reconstruction_by_Height.h  407_Trapping_Rain_Water_II.h  422_Valid_Word_Square.h  425_Word_Squares.h  42_Trapping_Rain_Water.h  43_Multiply_Strings.h  44_Wildcard_Matching.h  454_4Sum_II.h  464_Can_I_Win.h  465_Optimal_Account_Balancing.h  469_Convex_Polygon.h  587_Erect_the_Fence.h  655_Print_Binary_Tree.h  65_Valid_Number.h  (+22 more)
cpp/linkedin/: 150_Evaluate_Reverse_Polish_Notation.h  256_Paint_House.h  272_Closest_Binary_Search_Tree_Value_II.h  _binary_search.h  addinterval.h  all_palindrome_subsequences.h  blowoff_leaf.h  frequent_element.h  maxstack.h  onsite1.h  probability.h  set_cover_3rd_degree_friends.h
cpp/math/: montyhall.py
cpp/others/: HDU_pushbox.h  IndexMaxPQ.h  KNN.h  Kth_Smallest_in_Lexicographical_Order.h  MultiDimensionArray.h  _linkedlist.h  calendar.h  comb_sum.h  dup.h  index_heap_test.cpp  justifytextline.h  kangaroos.h  knighttour.h  ksum.h  ml_friends_recommendation.h  ml_kmeans_geo_mean.h  print_matrix.h  reliterator.h  reverse_string.h  segregate_even_odd_ll.h  serialize_tree.h  shortest_non_substring.h  skiplist.cpp  skiplist.h  sparsematrix.h  stree.h  todo_727_Minimum_Window_Subsequence.h  todo_avl.h  todo_graph_partition.h
cpp/practice/: 160_Intersection_of_Two_Linked_Lists.h  _20190120.h  longest_poolchain.h  practice_LRU_customized_eviction.h  practice_carpool.h  snapchat.h  (+3 more)
(+446 files in other folders)
